--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [workspace]
 members = [
+    "./redis/rsiot-redis-publisher",
+    "./redis/rsiot-redis-subscriber",
     "./rsiot",
     "./rsiot-component-core",
     "./rsiot-components-config",
@@ -9,8 +11,6 @@ members = [
     "./rsiot-http-server",
     "./rsiot-messages-core",
     "./rsiot-modbus-client",
-    "./rsiot-redis-publisher",
-    "./rsiot-redis-subscriber",
     "./rsiot-timescaledb-storing",
     "./rsiot-websocket-server",
     "./rsiot-websocket-client",
@@ -29,7 +29,7 @@ rust-version = "1.74.0"
 
 [workspace.dependencies]
 axum = { version = "0.7.1" }
-axum-test = { version = "13.4.1" }
+axum-test = { version = "14.0.0" }
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4", features = ["derive"] }
 dotenvy = { version = "0.15" }
@@ -37,7 +37,7 @@ envy = { version = "0.4" }
 http = { version = "1.0.0" }
 futures = { version = "0.3.29" }
 futures-util = { version = "0.3.29" }
-redis = { version = "0.23.3", features = ["tokio-comp"] }
+redis = { version = "0.24.0", features = ["tokio-comp"] }
 reqwest = { version = "0.11.22", features = ["json"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = { version = "1.0.108" }
@@ -57,7 +57,7 @@ tokio = { version = "1.34.0", features = [
 tokio-modbus = { version = "0.9.0", default-features = false, features = [
     "tcp",
 ] }
-tokio-tungstenite = { version = "0.20.1" }
+tokio-tungstenite = { version = "0.21.0" }
 tokio-util = { version = "0.7.10" }
 toml = { version = "0.8" }
 tower-http = { version = "0.5.0", features = ["cors", "trace"] }
@@ -83,8 +83,8 @@ rsiot-http-client = { version = "0.0.16", path = "./rsiot-http-client" }
 rsiot-http-server = { version = "0.0.16", path = "./rsiot-http-server" }
 rsiot-messages-core = { version = "0.0.16", path = "./rsiot-messages-core" }
 rsiot-modbus-client = { version = "0.0.16", path = "./rsiot-modbus-client" }
-rsiot-redis-publisher = { version = "0.0.16", path = "./rsiot-redis-publisher" }
-rsiot-redis-subscriber = { version = "0.0.16", path = "./rsiot-redis-subscriber" }
+rsiot-redis-publisher = { version = "0.0.16", path = "./redis/rsiot-redis-publisher" }
+rsiot-redis-subscriber = { version = "0.0.16", path = "./redis/rsiot-redis-subscriber" }
 rsiot-timescaledb-storing = { version = "0.0.16", path = "./rsiot-timescaledb-storing" }
 rsiot-websocket-client = { version = "0.0.16", path = "./rsiot-websocket-client" }
 rsiot-websocket-server = { version = "0.0.16", path = "./rsiot-websocket-server" }
