--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -32,7 +32,11 @@ rsiot-timescaledb-storing = { workspace = true, optional = true }
 
 [features]
 ## Базовые компоненты
-components = ["dep:rsiot-component-core", "dep:rsiot-extra-components"]
+components = [
+    "dep:tokio",
+    "dep:rsiot-component-core",
+    "dep:rsiot-extra-components",
+]
 ## Компонент http-клиент
 http-client = ["components", "dep:rsiot-http-client"]
 ## Компонент http-сервер
