--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "./rsiot-extra-components",
     "./rsiot-http-client",
     "./rsiot-http-server",
+    "./rsiot-message-router",
     "./rsiot-messages-core",
     "./rsiot-modbus-client",
     "./rsiot-redis-publisher",
@@ -28,7 +29,7 @@ rust-version = "1.74.1"
 
 
 [workspace.dependencies]
-axum = { version = "0.7.1" }
+axum = { version = "0.7.2" }
 axum-test = { version = "14.0.0" }
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4", features = ["derive"] }
@@ -47,7 +48,7 @@ sqlx = { version = "0.7.3", features = [
     "postgres",
     "runtime-tokio",
 ] }
-tokio = { version = "1.34.0", features = [
+tokio = { version = "1.35.0", features = [
     "macros",
     "rt",
     "rt-multi-thread",
@@ -81,6 +82,7 @@ rsiot-env-vars = { version = "0.0.17", path = "./rsiot-env-vars" }
 rsiot-extra-components = { version = "0.0.17", path = "./rsiot-extra-components" }
 rsiot-http-client = { version = "0.0.17", path = "./rsiot-http-client" }
 rsiot-http-server = { version = "0.0.17", path = "./rsiot-http-server" }
+rsiot-message-router = { version = "0.0.0", path = "./rsiot-message-router" }
 rsiot-messages-core = { version = "0.0.17", path = "./rsiot-messages-core" }
 rsiot-modbus-client = { version = "0.0.17", path = "./rsiot-modbus-client" }
 rsiot-redis-publisher = { version = "0.0.18", path = "./rsiot-redis-publisher" }
