--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -14,6 +14,8 @@ version = "0.0.18"
 document-features = { workspace = true }
 
 tokio = { workspace = true, optional = true }
+chrono = { workspace = true }
+url = { workspace = true }
 
 rsiot-component-core = { workspace = true, optional = true }
 rsiot-extra-components = { workspace = true, optional = true }
