--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "./rsiot-extra-components",
     "./rsiot-http-client",
     "./rsiot-http-server",
+    "./rsiot-logging",
     "./rsiot-message-router",
     "./rsiot-messages-core",
     "./rsiot-modbus-client",
@@ -62,12 +63,15 @@ tokio-tungstenite = { version = "0.21.0" }
 tokio-util = { version = "0.7.10" }
 toml = { version = "0.8" }
 tower-http = { version = "0.5.0", features = ["cors", "trace"] }
-tracing = { version = "0.1.40" }
-tracing-subscriber = { version = "0.3.18" }
 url = { version = "2.5.0" }
 
 # документация
 document-features = { version = "0.2.7" }
+
+# логгирование
+tracing = { version = "0.1.40" }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-loki = { version = "0.2.4" }
 
 # для макросов
 proc-macro2 = "1.0"
@@ -82,6 +86,7 @@ rsiot-env-vars = { version = "0.0.17", path = "./rsiot-env-vars" }
 rsiot-extra-components = { version = "0.0.17", path = "./rsiot-extra-components" }
 rsiot-http-client = { version = "0.0.17", path = "./rsiot-http-client" }
 rsiot-http-server = { version = "0.0.17", path = "./rsiot-http-server" }
+rsiot-logging = { version = "0.0.0", path = "./rsiot-logging" }
 rsiot-message-router = { version = "0.0.0", path = "./rsiot-message-router" }
 rsiot-messages-core = { version = "0.0.17", path = "./rsiot-messages-core" }
 rsiot-modbus-client = { version = "0.0.17", path = "./rsiot-modbus-client" }
