--- a/rsiot-config-files/loki/docker-compose.yml
+++ b/rsiot-config-files/loki/docker-compose.yml
@@ -2,8 +2,7 @@ services:
   loki:
     container_name: loki
     hostname: loki
-    # https://hub.docker.com/r/grafana/loki/tags?page=1&name=2.
-    image: grafana/loki:2.9.2
+    image: grafana/loki:2.9.2 # https://hub.docker.com/r/grafana/loki/tags?page=1&name=2.
     ports:
       - "${LOKI_PORT}:3100"
     profiles:
@@ -12,6 +11,12 @@ services:
     command: -config.file=/etc/loki/local-config.yaml
     networks:
       - network_internal
+    volumes:
+      - loki_data:/loki
+
+volumes:
+  loki_data:
+    name: loki_data
 
 networks:
   network_internal:
