--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 keywords.workspace = true
 license.workspace = true
 readme = "README.md"
+repository.workspace = true
 rust-version.workspace = true
 
 
