--- a/rsiot-logging/Cargo.toml
+++ b/rsiot-logging/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rsiot-logging"
-version = "0.0.23"
+version = "0.0.24"
 description = "Настройка логгирования"
 categories.workspace = true
 edition.workspace = true
@@ -12,6 +12,9 @@ rust-version.workspace = true
 
 [dependencies]
 tracing = { workspace = true }
-tokio = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+
+[target.'cfg(not(target_arch = "wasm"))'.dependencies]
 tracing-loki = { workspace = true }
+tokio = { workspace = true }
