--- a/rsiot-logging/Cargo.toml
+++ b/rsiot-logging/Cargo.toml
@@ -13,8 +13,8 @@ rust-version.workspace = true
 [dependencies]
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+url = { workspace = true }
 
-
-[target.'cfg(not(target_arch = "wasm"))'.dependencies]
+[target.'cfg(any(target_arch = "x86_64"))'.dependencies]
 tracing-loki = { workspace = true }
 tokio = { workspace = true }
