--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -25,6 +25,7 @@ rsiot-http-server = { workspace = true, optional = true }
 rsiot-logging = { workspace = true }
 rsiot-messages-core = { workspace = true }
 rsiot-modbus-client = { workspace = true, optional = true }
+rsiot-plc = { workspace = true, optional = true }
 rsiot-redis-publisher = { workspace = true, optional = true }
 rsiot-redis-subscriber = { workspace = true, optional = true }
 rsiot-websocket-client = { workspace = true, optional = true }
@@ -49,6 +50,8 @@ http-client = ["components", "dep:rsiot-http-client"]
 http-server = ["components", "dep:rsiot-http-server"]
 ## Компонент Modbus клиент
 modbus-client = ["components", "dep:rsiot-modbus-client"]
+# Компонент ПЛК
+plc = ["components", "dep:rsiot-plc"]
 ## Компонент публикации сообщений в Redis
 redis-publisher = ["components", "dep:rsiot-redis-publisher"]
 ## Компонент подписики на сообщения из Redis
