--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "./rsiot-component-core",
     "./rsiot-components-config",
     "./rsiot-env-vars",
+    "./rsiot-esp-gpio",
     "./rsiot-extra-components",
     "./rsiot-http-client",
     "./rsiot-http-server",
@@ -84,6 +85,7 @@ syn = "2.0"
 rsiot-component-core = { version = "0.0.21", path = "./rsiot-component-core" }
 rsiot-components-config = { version = "0.0.23", path = "./rsiot-components-config" }
 rsiot-env-vars = { version = "0.0.21", path = "./rsiot-env-vars" }
+rsiot-esp-gpio = { version = "0.0.0", path = "./rsiot-esp-gpio" }
 rsiot-extra-components = { version = "0.0.22", path = "./rsiot-extra-components" }
 rsiot-http-client = { version = "0.0.23", path = "./rsiot-http-client" }
 rsiot-http-server = { version = "0.0.23", path = "./rsiot-http-server" }
