--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -6,6 +6,7 @@ keywords.workspace = true
 license.workspace = true
 name = "rsiot"
 readme = "README.md"
+repository.workspace = true
 rust-version.workspace = true
 version = "0.0.25"
 
