--- a/rsiot-gpio-read-esp/examples/esp32-c3/Cargo.toml
+++ b/rsiot-gpio-read-esp/examples/esp32-c3/Cargo.toml
@@ -16,15 +16,20 @@ opt-level = "z"
 [features]
 
 [dependencies]
+anyhow = { version = "*" }
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.47.3", features = ["std"] }
 serde = { version = "*" }
 tokio = { version = "*" }
 tracing = { version = "*", features = ["log"] }
+rgb = { version = "0.8.37", features = ["serde"] }
 
 rsiot-gpio-read-esp = { path = "../../../rsiot-gpio-read-esp" }
 # TODO - убрать path после новой версии
-rsiot = { version = "*", features = ["components"], path = "../../../rsiot" }
+rsiot = { version = "*", features = [
+    "components",
+    "plc",
+], path = "../../../rsiot" }
 
 [build-dependencies]
 embuild = "0.31.3"
