--- a/rsiot-esp/Cargo.toml
+++ b/rsiot-esp/Cargo.toml
@@ -4,7 +4,7 @@ description = "Чтение входов GPIO микроконтроллера E
 edition = "2021"
 # keywords.workspace = true
 # license.workspace = true
-name = "rsiot-gpio-read-esp"
+name = "rsiot-esp"
 readme = "README.md"
 # repository.workspace = true
 # rust-version.workspace = true
@@ -24,11 +24,9 @@ esp-idf-svc = { version = "0.47.3", features = ["std"] }
 tracing = { version = "*" }
 tokio = { version = "*" }
 
-rsiot-messages-core = { version = "0.0.21" }
-rsiot-component-core = { version = "0.0.21" }
+rsiot-messages-core = { version = "0.0.21", path = "../rsiot-messages-core" }
+rsiot-component-core = { version = "0.0.21", path = "../rsiot-component-core" }
 rsiot-extra-components = { version = "0.0.22" }
 
 [build-dependencies]
 embuild = "0.31.3"
-
-[workspace]
