--- a/rsiot-esp/Cargo.toml
+++ b/rsiot-esp/Cargo.toml
@@ -20,9 +20,10 @@ opt-level = "z"
 
 
 [dependencies]
+tokio = { version = "*" }
+# serde = { version = "*" }
 esp-idf-svc = { version = "0.47.3", features = ["std"] }
 tracing = { version = "*" }
-tokio = { version = "*" }
 
 rsiot-messages-core = { version = "0.0.21", path = "../rsiot-messages-core" }
 rsiot-component-core = { version = "0.0.21", path = "../rsiot-component-core" }
