--- a/rsiot-components-config/Cargo.toml
+++ b/rsiot-components-config/Cargo.toml
@@ -15,3 +15,4 @@ http = { workspace = true }
 url = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
+rsiot-extra-components = { workspace = true }
