--- a/rsiot-plc/Cargo.toml
+++ b/rsiot-plc/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
+categories.workspace = true
+description = "Компонент для исполнения логики наподобие PLC"
+edition.workspace = true
+keywords.workspace = true
+license.workspace = true
 name = "rsiot-plc"
+readme = "README.md"
+repository.workspace = true
+rust-version.workspace = true
 version = "0.0.26"
-edition = "2021"
 
 
 [dependencies]
@@ -13,6 +20,7 @@ tracing = { workspace = true }
 rsiot-component-core = { workspace = true }
 rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
+
 
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
