--- a/rsiot-esp/Cargo.toml
+++ b/rsiot-esp/Cargo.toml
@@ -24,10 +24,13 @@ tokio = { version = "*" }
 esp-idf-svc = { version = "0.47.3", features = ["std"] }
 embedded-svc = { version = "*" }
 tracing = { version = "*" }
+postcard = { version = "1", features = ["use-std"] }
+serde = { version = "*" }
+thiserror = { version = "*" }
 
-rsiot-component-core = { version = "0.0.27", path = "../rsiot-component-core" }
-rsiot-extra-components = { version = "0.0.27", path = "../rsiot-extra-components" }
-rsiot-messages-core = { version = "0.0.26", path = "../rsiot-messages-core" }
+rsiot-component-core = { version = "*" }
+rsiot-extra-components = { version = "*" }
+rsiot-messages-core = { version = "*" }
 
 [build-dependencies]
 embuild = "0.31.3"
