redis-client errors with thiserror

--- a/rsiot-redis-client/Cargo.toml
+++ b/rsiot-redis-client/Cargo.toml
@@ -14,6 +14,7 @@ rust-version.workspace = true
 [dependencies]
 futures-util = { workspace = true }
 redis = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
