--- a/rsiot-components-config/Cargo.toml
+++ b/rsiot-components-config/Cargo.toml
@@ -11,7 +11,10 @@ rust-version.workspace = true
 
 
 [dependencies]
+anyhow = { workspace = true }
 http = { workspace = true }
+serde = { workspace = true }
+thiserror = { workspace = true }
 url = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
