--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,6 @@ sqlx = { version = "0.7.3", features = [
     "postgres",
     "runtime-tokio",
 ] }
-thiserror = { version = "1.0.56" }
 tokio = { version = "1.35.0", features = [
     "macros",
     "rt",
@@ -57,7 +56,7 @@ tokio = { version = "1.35.0", features = [
     "sync",
     "time",
 ] }
-tokio-modbus = { version = "0.9.0", default-features = false, features = [
+tokio-modbus = { version = "0.10.0", default-features = false, features = [
     "tcp",
 ] }
 tokio-tungstenite = { version = "0.21.0" }
@@ -65,6 +64,9 @@ tokio-util = { version = "0.7.10" }
 toml = { version = "0.8" }
 tower-http = { version = "0.5.0", features = ["cors", "trace"] }
 url = { version = "2.5.0" }
+
+anyhow = { version = "1.0.79" }
+thiserror = { version = "1.0.56" }
 
 # документация
 document-features = { version = "0.2.7" }
