--- a/rsiot-extra-components/Cargo.toml
+++ b/rsiot-extra-components/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 
@@ -17,5 +18,6 @@ rsiot-component-core = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
+anyhow = { workspace = true }
 serde = { workspace = true }
 tracing-subscriber = { workspace = true }
