--- a/rsiot-http-client/Cargo.toml
+++ b/rsiot-http-client/Cargo.toml
@@ -10,7 +10,9 @@ readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
+anyhow = { workspace = true }
 reqwest = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
@@ -21,6 +23,7 @@ rsiot-messages-core = { workspace = true }
 
 
 [dev-dependencies]
+anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing-subscriber = { workspace = true }
