--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -22,6 +22,7 @@ rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
+anyhow = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 rsiot-extra-components = { workspace = true }
