--- a/rsiot-plc/Cargo.toml
+++ b/rsiot-plc/Cargo.toml
@@ -14,6 +14,7 @@ version = "0.0.30"
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 
@@ -22,5 +23,6 @@ rsiot-messages-core = { workspace = true }
 
 
 [dev-dependencies]
+anyhow = { workspace = true }
 rsiot-extra-components = { workspace = true }
 tracing-subscriber = { workspace = true }
