--- a/rsiot-redis-client/Cargo.toml
+++ b/rsiot-redis-client/Cargo.toml
@@ -25,6 +25,7 @@ rsiot-messages-core = { workspace = true }
 
 
 [dev-dependencies]
+anyhow = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 rsiot-extra-components = { workspace = true }
