--- a/rsiot-websocket-client/Cargo.toml
+++ b/rsiot-websocket-client/Cargo.toml
@@ -22,6 +22,7 @@ rsiot-messages-core = { workspace = true }
 
 
 [dev-dependencies]
+anyhow = { workspace = true }
 serde = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
