--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,8 +73,9 @@ document-features = { version = "0.2.7" }
 
 # логгирование
 tracing = { version = "0.1.40", features = ["log"] }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
 tracing-loki = { version = "0.2.4" }
+tracing-web = { version = "0.1.3" }
 
 # для макросов
 proc-macro2 = "1.0"
