--- a/rsiot-logging/Cargo.toml
+++ b/rsiot-logging/Cargo.toml
@@ -11,10 +11,14 @@ repository.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
 
-[target.'cfg(any(target_arch = "x86_64"))'.dependencies]
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+tracing-web = { workspace = true }
+
+[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
 tracing-loki = { workspace = true }
 tokio = { workspace = true }
