--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "./rsiot-timescaledb-storing",
     "./rsiot-websocket-server",
     "./rsiot-websocket-client",
+    "./rsiot-component-singlethread",
 ]
 exclude = ["./rsiot-esp"]
 resolver = "2"
@@ -52,7 +53,7 @@ sqlx = { version = "0.7.3", features = [
 tokio = { version = "1.35.0", features = [
     "macros",
     "rt",
-    "rt-multi-thread",
+    # "rt-multi-thread",
     "sync",
     "time",
 ] }
