--- a/rsiot-extra-components/Cargo.toml
+++ b/rsiot-extra-components/Cargo.toml
@@ -10,14 +10,20 @@ readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
+async-trait = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 
 rsiot-component-core = { workspace = true }
+rsiot-component-core2 = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
 serde = { workspace = true }
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing-subscriber = { workspace = true }
+
+[features]
+single-thread = ["rsiot-component-core2/single-thread"]
