--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -11,13 +11,15 @@ rust-version.workspace = true
 
 
 [dependencies]
+async-trait = { workspace = true }
 serde = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-modbus = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
-rsiot-component-core = { workspace = true }
+rsiot-component-core2 = { workspace = true }
 rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
