small fix after publish

--- a/rsiot-redis-client/Cargo.toml
+++ b/rsiot-redis-client/Cargo.toml
@@ -34,10 +34,7 @@ rsiot-extra-components = { workspace = true }
 
 
 [features]
-"single-thread" = [
-    "rsiot-component-core/single-thread",
-    "rsiot-extra-components/single-thread",
-]
+"single-thread" = ["rsiot-component-core/single-thread"]
 
 
 [[example]]
