--- a/rsiot-websocket-server/Cargo.toml
+++ b/rsiot-websocket-server/Cargo.toml
@@ -33,7 +33,4 @@ rsiot-extra-components = { workspace = true }
 
 
 [features]
-"single-thread" = [
-    "rsiot-component-core/single-thread",
-    "rsiot-extra-components/single-thread",
-]
+"single-thread" = ["rsiot-component-core/single-thread"]
