http-client-wasm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "./rsiot-env-vars",
     "./rsiot-extra-components",
     "./rsiot-http-client",
+    "./rsiot-http-client-wasm",
     "./rsiot-http-server",
     "./rsiot-logging",
     "./rsiot-messages-core",
@@ -13,9 +14,9 @@ members = [
     "./rsiot-plc",
     "./rsiot-redis-client",
     "./rsiot-timescaledb-storing",
-    "./rsiot-websocket-server",
     "./rsiot-websocket-client",
-    "rsiot-websocket-client-wasm",
+    "./rsiot-websocket-client-wasm",
+    "./rsiot-websocket-server",
 ]
 exclude = ["./rsiot-esp"]
 resolver = "2"
@@ -91,6 +92,7 @@ rsiot-components-config = { version = "0.0.32", path = "./rsiot-components-confi
 rsiot-env-vars = { version = "0.0.32", path = "./rsiot-env-vars" }
 rsiot-extra-components = { version = "0.0.32", path = "./rsiot-extra-components" }
 rsiot-http-client = { version = "0.0.32", path = "./rsiot-http-client" }
+rsiot-http-client-wasm = { version = "0.0.0", path = "./rsiot-http-client-wasm" }
 rsiot-http-server = { version = "0.0.32", path = "./rsiot-http-server" }
 rsiot-logging = { version = "0.0.32", path = "./rsiot-logging" }
 rsiot-messages-core = { version = "0.0.32", path = "./rsiot-messages-core" }
