--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  // "rust-analyzer.cargo.features": ["single-thread"]
-  "rust-analyzer.cargo.features": []
+  "rust-analyzer.cargo.features": ["single-thread"]
+  // "rust-analyzer.cargo.features": []
 }
