--- a/rsiot-http-client-wasm/Cargo.toml
+++ b/rsiot-http-client-wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rsiot-websocket-server"
-version = "0.0.33"
-description = "Websocket-сервер"
+name = "rsiot-http-client-wasm"
+version = "0.0.0"
+description = "HTTP-клиент для платформы WASM"
 categories.workspace = true
 edition.workspace = true
 keywords.workspace = true
@@ -13,12 +13,10 @@ rust-version.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 async-trait = { workspace = true }
-serde = { workspace = true }
-futures-util = { workspace = true }
+gloo = { workspace = true }
+http = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
-tokio-util = { workspace = true }
-tokio-tungstenite = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
@@ -27,13 +25,5 @@ rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 
-[dev-dependencies]
-anyhow = { workspace = true }
-tracing-subscriber = { workspace = true }
-tokio = { workspace = true, features = ["rt-multi-thread"] }
-
-rsiot-extra-components = { workspace = true }
-
-
 [features]
-"single-thread" = ["rsiot-component-core/single-thread"]
+single-thread = ["rsiot-component-core/single-thread"]
