--- a/rsiot-config-files/loki/docker-compose.yml
+++ b/rsiot-config-files/loki/docker-compose.yml
@@ -1,16 +1,21 @@
 services:
   loki:
+    command: -config.file=/etc/loki/local-config.yaml
     container_name: loki
+    healthcheck:
+      test: wget --spider http://localhost:3100/ready
+      interval: 10s
+      timeout: 20s
+      retries: 15
     hostname: loki
     image: grafana/loki:2.9.2 # https://hub.docker.com/r/grafana/loki/tags?page=1&name=2.
+    networks:
+      - network_internal
     ports:
       - "${LOKI_PORT}:3100"
     profiles:
       - dev
       - target
-    command: -config.file=/etc/loki/local-config.yaml
-    networks:
-      - network_internal
     volumes:
       - loki_data:/loki
 
