--- a/rsiot-config-files/redis/docker-compose.yml
+++ b/rsiot-config-files/redis/docker-compose.yml
@@ -1,14 +1,24 @@
 services:
   redis:
     container_name: redis
+    healthcheck:
+      test: redis-cli --raw incr ping
+      interval: 5s
+      timeout: 5s
+      retries: 5
     hostname: redis
     image: redis/redis-stack:latest
+    networks:
+      - network_internal
     ports:
       - "${REDIS_PORT}:6379" # порт Redis
       - "${REDIS_PORT_UI}:8001" # порт UI
     volumes:
       - redis_data:/data # для сохранения данных
       - ./services/redis/redis.conf:/redis-stack.conf # путь к файлу конфигурации
+
+networks:
+  network_internal:
 
 volumes:
   redis_data:
