--- a/rsiot-logging/Cargo.toml
+++ b/rsiot-logging/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rsiot-logging"
-version = "0.0.35"
+version = "0.0.36"
 description = "Настройка логгирования"
 categories.workspace = true
 edition.workspace = true
@@ -18,6 +18,7 @@ url = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tracing-web = { workspace = true }
+dotenvy_macro = { version = "*" }  # TODO
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
 tracing-loki = { workspace = true }
