improve logging, add message types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ clap = { version = "4.4", features = ["derive"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 http = { version = "1.0.0" }
 url = { version = "2.5.0" }
+uuid = { version = "1.6.1", features = ["serde", "v4"] }
 
 # documentation
 document-features = { version = "0.2.7" }
@@ -62,7 +63,6 @@ sqlx = { version = "0.7.3", features = [
 
 # env vars
 dotenvy = { version = "0.15" }
-dotenvy_macro = { version = "0.15.7" }
 envy = { version = "0.4" }
 
 # errors
