--- a/rsiot-config-files/rust/docker-compose.yml
+++ b/rsiot-config-files/rust/docker-compose.yml
@@ -19,6 +19,9 @@ services:
       - target
     volumes:
       - ./backend:/backend
+      - ./.env:/.env
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
 
 networks:
   network_internal:
