--- a/rsiot-http-server/Cargo.toml
+++ b/rsiot-http-server/Cargo.toml
@@ -33,4 +33,7 @@ rsiot-extra-components = { workspace = true }
 
 
 [features]
-"single-thread" = ["rsiot-component-core/single-thread"]
+"single-thread" = [
+    "rsiot-component-core/single-thread",
+    "rsiot-extra-components/single-thread",
+]
