--- a/rsiot-config-files/portainer/docker-compose.yml
+++ b/rsiot-config-files/portainer/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     volumes:
       - portainer_data_volume:/data
       - /var/run/docker.sock:/var/run/docker.sock
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
 
 volumes:
   portainer_data_volume:
