--- a/rsiot-http-server/Cargo.toml
+++ b/rsiot-http-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rsiot-http-server"
-version = "0.0.38"
+version = "0.0.39"
 description = "HTTP-сервер"
 categories.workspace = true
 edition.workspace = true
@@ -20,6 +20,8 @@ url = { workspace = true }
 
 rsiot-component-core = { workspace = true }
 rsiot-components-config = { workspace = true }
+# TODO - нужна только в dev, но ругается на feature
+rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 
@@ -28,8 +30,6 @@ anyhow = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing-subscriber = { workspace = true }
-
-rsiot-extra-components = { workspace = true }
 
 
 [features]
